<resources>
    <string name="app_name">MockFeed</string>
    <string name="user_name_def">John Doe</string>
    <string name="user_info_def">Android Developer</string>
    <string name="post_title_def">Post Title</string>
    <string name="post_small_info_def">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras cursus tempor lacus, sed ullamcorper quam ullamcorper in. Quisque hendrerit felis velit.</string>
    <string name="post_description_def">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras cursus tempor lacus, sed ullamcorper quam ullamcorper in. Quisque hendrerit felis velit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras cursus tempor lacus, sed ullamcorper quam ullamcorper in. Quisque hendrerit felis velit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras cursus tempor lacus, sed ullamcorper quam ullamcorper in. Quisque hendrerit felis velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras cursus tempor lacus, sed ullamcorper quam ullamcorper in. Quisque hendrerit felis velit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras cursus tempor lacus, sed ullamcorper quam ullamcorper in. Quisque hendrerit felis velit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras cursus tempor lacus, sed ullamcorper quam ullamcorper in. Quisque hendrerit felis velit.</string>
    <string name="profile_pic_desc">Profile Pic</string>
    <string name="post_pic_desc">Post Pic</string>
    <string name="menu_option_1">Profile</string>
    <string name="menu_option_2">Saved</string>
    <string name="menu_option_3">Chat</string>
    <string name="menu_option_4">Settings</string>
    <string name="menu_option_5">Info</string>
    <string name="menu_option_6">Logout</string>
    <string name="nav_start">Open</string>
    <string name="nav_stop">Close</string>
    <string name="nav_header_pic">Navigation Drawer Header Picture</string>
    <string name="curr_user_name">Prasoon Pandey</string>
    <string name="curr_user_id">\@prasoon06</string>
    <string name="postContdIndicator">…</string>
    <string name="sign_in_header">Sign In</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="log_in_btn">Log In</string>
    <string name="sign_up_prompt">Don\'t have an account?</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="re_type_hint">Re-type Password</string>
    <string name="sign_up_btn">Create Account</string>
    <string name="login_prompt">Already Have An Account?</string>
    <string-array name="profile_pics">
        <item>@drawable/profile_pic_1</item>
        <item>@drawable/profile_pic_2</item>
        <item>@drawable/profile_pic_3</item>
        <item>@drawable/profile_pic_4</item>
        <item>@drawable/profile_pic_5</item>
        <item>@drawable/profile_pic_6</item>
        <item>@drawable/profile_pic_7</item>
        <item>@drawable/profile_pic_8</item>
        <item>@drawable/profile_pic_9</item>
        <item>@drawable/profile_pic_10</item>
    </string-array>
    <string-array name="user_names">
        <item>Sanjay</item>
        <item>Abhit</item>
        <item>Ankit</item>
        <item>Adarsh</item>
        <item>Venika</item>
        <item>Ayushi</item>
        <item>Nishant</item>
        <item>Mentric T&amp;C</item>
        <item>Ananta Shesha Das</item>
        <item>Divya</item>
    </string-array>
    <string-array name="user_infos">
        <item>Assistant Manager</item>
        <item>Research Intern</item>
        <item>Operations Manager Intern at Uravu Labs</item>
        <item>CSE Student</item>
        <item>MS Business Analyst</item>
        <item>SDE at Walmart</item>
        <item>Grocers son revolutionizing kiranas</item>
        <item>Competency Assessments</item>
        <item>Monk</item>
        <item>Founder at N Space Tech</item>
    </string-array>
    <string-array name="post_pics">
        <item>@drawable/post_pic_1</item>
        <item>@drawable/post_pic_2</item>
        <item>@drawable/post_pic_3</item>
        <item>@drawable/post_pic_4</item>
        <item>@drawable/post_pic_5</item>
        <item>@drawable/post_pic_6</item>
        <item>@drawable/post_pic_7</item>
        <item>@drawable/post_pic_8</item>
        <item>@drawable/post_pic_9</item>
        <item>@drawable/post_pic_10</item>
    </string-array>
    <string-array name="post_titles">
        <item>Vidyashankara Temple</item>
        <item>We are the finalists!</item>
        <item>Startups to watch for</item>
        <item>Graduation</item>
        <item>Adios, my alma mater</item>
        <item>Learn SQL</item>
        <item>Petrol Prices</item>
        <item>Mentric Training</item>
        <item>Karma</item>
        <item>Felication</item>
    </string-array>
    <string-array name="post_small_infos">
        <item>Whenever they say my ancestors did not build anything extraordinary, i ask them whether they have been anywhere outside Delhi or Agra. That white structure is a wonder because it was nominated by the government of India and has become a wonder on the basis of public voting and </item>

        <item>Hey everyone!I am happy to share that we - Team 72 emerged as the 𝗧𝗼𝗽 𝟮 𝗙𝗶𝗻𝗮𝗹𝗶𝘀𝘁𝘀 for Code for Good 2022 Hackathon organized by JPMorgan Chase and Co.It was a great experience working with Abhishek Padhy, Akshat jain, Zaid Shaikh, Aditya Sharma, Samreen Sadiya and Khushi Suresh</item>

        <item>#30StartupsToWatch | May 2022. Every month, the Inc42 team curates 30 sector-agnostic startups with a unique value proposition. The 28th edition of the 30 Startups To Watch series aims to put emphasis on companies creating value instead of chasing valuation.</item>

        <item>Hello Everyone, Pleased to share that I have officially graduated from IIT ISM Dhanbad. IIT fills you up with humility. I know, the people i have shared this space with, will invent something new for the world or they will lead business economies to growth and wisdom. It is not merely about the best in class studies </item>

        <item>I am incredibly humbled and elated to share that two weeks ago, I graduated from Columbia University in the City of New York with a Masters degree in Business Analytics. My journey at Columbia has truly been an amazing and wonderfully enriching experience</item>

        <item>Today I am going to share one of the best and FREE resource to learn SQL. It is the SQL series by Sumit Mittal sir. He has covered all the concepts in depth and solved numerous Leetcode problems for interview preparation. Making it one of the best SQL courses on YouTube. 🙌🏻 Not only this, </item>

        <item>Petrol is roughly ₹100/L. For the same distance CNG almost costs the half. If you have a CNG vehicle in Delhi, you are 8/10 times likely to find a long queue of vehicles. On the flip side, petrol queues have nearly disappeared. Even though petrol is an expensive fuel, at least we save valuable time.</item>

        <item>Mentric started as an Industry oriented training Organization in 2017, focusing on the Building Management sector. We have trained and placed over 1000 students - Electrical &amp; Mechanical Engineers in Technical areas and other graduates in non-technical areas - at leading Facility Management organizations.</item>

        <item>In this picture, elephant represents past karma. Snakes in the pond represents future karma. Branch of the tree represents present life white and black rats are day and night which eats the presents life. Honey comb in the tree is Maya, Illusion, sense gratification</item>

        <item>I am extremely grateful for this. A few days back I was invited to KL University for the felicitation on the occasion of the successful stratospheric balloon flight of my payload LakshyaSAT. It was quite a day. Felicitation by Honourable Vice-Chancellor of KL University Dr G.Pardha Saradhi Varma, followed by</item>
    </string-array>
</resources>