<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Dividing into groups so that a separating line is rendered -->
    <group android:id="@+id/group1">
        <item
            android:id="@+id/menu_option_1"
            android:icon="@drawable/profile_pic_def"
            android:title="@string/menu_option_1" />
        <item
            android:id="@+id/menu_option_2"
            android:icon="@drawable/menu_saved_ic"
            android:title="@string/menu_option_2" />
        <item
            android:id="@+id/menu_option_3"
            android:icon="@drawable/menu_chat_ic"
            android:title="@string/menu_option_3" />
    </group>
    <group android:id="@+id/group2">
        <item
            android:id="@+id/menu_option_4"
            android:icon="@drawable/menu_settings_ic"
            android:title="@string/menu_option_4" />
        <item
            android:id="@+id/menu_option_5"
            android:icon="@drawable/menu_info_ic"
            android:title="@string/menu_option_5" />
        <item
            android:id="@+id/menu_option_6"
            android:icon="@drawable/menu_logout_ic"
            android:title="@string/menu_option_6" />
    </group>
</menu>
