<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Same reason as in activity_main.xml -->
        <include
            android:id="@+id/customToolbar"
            layout="@layout/toolbar" />

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/customToolbar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/profile_pic_bg"
            android:contentDescription="@string/profile_pic_desc"
            android:src="@drawable/profile_pic_def" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customToolbar"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/profile_pic"
            android:text="@string/user_name_def"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:layout_alignStart="@+id/user_name"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/profile_pic"
            android:text="@string/user_info_def"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/post_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_info"
            android:adjustViewBounds="true"
            android:contentDescription="@string/post_pic_desc"
            android:src="@drawable/post_pic_1"
            android:transitionName="sharedTransition" />

        <TextView
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post_pic"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/post_title_def"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post_title"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/post_description_def"
            android:textSize="20sp" />


    </RelativeLayout>

</ScrollView>