<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/nav_header_bg">

    <ImageView
        android:id="@+id/curr_user_pic"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/profile_pic_bg"
        android:contentDescription="@string/profile_pic_desc"
        android:src="@drawable/nav_header" />

    <TextView
        android:id="@+id/curr_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/curr_user_pic"
        android:layout_marginStart="16dp"
        android:text="@string/curr_user_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/curr_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/curr_user_name"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/curr_user_id"
        android:textSize="16sp" />
</RelativeLayout>